--- a/MyLibrary/src/PanelOk/ThemeUpdate.form
+++ b/MyLibrary/src/PanelOk/ThemeUpdate.form
@@ -92,7 +92,7 @@
                       </Group>
                       <Component id="jButton1" min="-2" pref="161" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="58" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
