--- a/MyLibrary/src/PanelOk/AuthorAddPanel.form
+++ b/MyLibrary/src/PanelOk/AuthorAddPanel.form
@@ -123,7 +123,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Status"/>
+            <Property name="text" type="java.lang.String" value="Statut"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
