--- a/MyLibrary/src/PanelOk/AuthorAddPanel.form
+++ b/MyLibrary/src/PanelOk/AuthorAddPanel.form
@@ -66,8 +66,8 @@
                                   <Component id="jRI" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jTFirstName" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jTLastName" alignment="0" min="-2" pref="275" max="-2" attributes="0"/>
+                              <Component id="jTLastName" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jTFirstName" alignment="0" min="-2" pref="275" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="0" attributes="0">
@@ -91,12 +91,12 @@
                   <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel5" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
-                      <Component id="jTLastName" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTFirstName" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel1" alignment="3" min="-2" pref="37" max="-2" attributes="0"/>
-                      <Component id="jTFirstName" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTLastName" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -150,9 +150,9 @@
             <Property name="text" type="java.lang.String" value="Actif"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTLastName">
-        </Component>
         <Component class="javax.swing.JTextField" name="jTFirstName">
+        </Component>
+        <Component class="javax.swing.JTextField" name="jTLastName">
         </Component>
         <Container class="javax.swing.JScrollPane" name="jScrollPane1">
           <AuxValues>
